perubahan pada heading 1

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>hello world - belajar git</h1>
+    <h1>belajar git</h1>
     <p>ini paragraf</p>
   </body>
 </html>
